fix misaligned design

--- a/src/main/webapp/app/exercises/text/assess/textblock-feedback-editor/textblock-feedback-editor.component.scss
+++ b/src/main/webapp/app/exercises/text/assess/textblock-feedback-editor/textblock-feedback-editor.component.scss
@@ -119,7 +119,7 @@ label {
         }
 
         &:hover > .dropdown-submenu {
-            display: flex;
+            display: block;
             position: absolute;
             left: 100%;
             top: 0;
